# dep-sync

./: .gitignore  404.html  LICENSE.txt  README.md  hatch.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  ruff_defaults.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  test.yml
api/: index.html
changelog/: index.html
docs/: api.md  changelog.md  index.md
search/: search_index.json
src/dep_sync/: __init__.py  _dependency.py  _distributions.py  _utils.py  scripts.py
tests/: __init__.py  conftest.py  test_dependency.py  test_distributions.py
